[package]
name = "dnscache"
version = "0.1.0"
authors = ["Vitaly _Vi Shukela <vi0oss@gmail.com>"]

[dependencies]
dns-parser = { version = "0.7" }
compactmap = { version = "0.3" }
bytes = { version = "0.4" }
serde = { version = "1" }
serde_cbor = { version = "0.6" }
serde_derive = { version = "1" }
rusty-leveldb = { version = "0.1" }
multimap = "0.4.0"
