[package]
name = "dnscache"
version = "0.1.3"
authors = ["Vitaly _Vi Shukela <vi0oss@gmail.com>"]
description = "Simple DNS proxy with forced caching"
repository = "https://github.com/vi/dnscache"
license = "MIT/Apache-2.0"

[dependencies]
dns-parser = { version = "0.7" }
compactmap = { version = "0.3" }
bytes = { version = "0.4" }
serde = { version = "1" }
serde_cbor = { version = "0.6" }
serde_derive = { version = "1" }
rusty-leveldb = { version = "0.1" }
multimap = "0.4"
structopt = "0.1"
structopt-derive = "0.1"
clamp = "0.1"
serde_bytes = "0.10"
