[package]
name = "dnscache"
version = "0.3.2"
authors = ["Vitaly _Vi Shukela <vi0oss@gmail.com>"]
description = "Simple DNS proxy with forced caching"
repository = "https://github.com/vi/dnscache"
license = "MIT/Apache-2.0"

[dependencies]
dns-parser = { version = "0.7" }
compactmap = { version = "^0.3.4" }
bytes = { version = "0.4" }
serde = { version = "1" }
serde_derive = { version = "1" }
serde_bytes = "0.10"
multimap = "0.4"
clamp = "0.1"
log = "0.4"
serde_cbor = { version = "0.8", optional=true }
structopt = {version="0.2", optional=true}
structopt-derive = {version="0.2", optional=true}
rusty-leveldb = { version = "^0.2.3", optional=true }
println_logger = {version="0.2", optional=true}

[features]
default=["bin"]
bin=["structopt","structopt-derive","serde_cbor","rusty-leveldb","println_logger"]

